--- a/language/fr_FR.UTF-8/help/cat_modify.html
+++ b/language/fr_FR.UTF-8/help/cat_modify.html
@@ -1,103 +1,103 @@
-<h2>Modifier une catégorie</h2>
+<h2>Modifier une catÃ©gorie</h2>
 
-<p>Modifier les informations et options d'une catégorie.</p>
+<p>Modifier les informations et options d'une catÃ©gorie.</p>
 
 <h3>Liens d'action</h3>
 
-<p>Cette page est liée à la page de modification de chaque catégorie parente
+<p>Cette page est liÃ©e Ã  la page de modification de chaque catÃ©gorie parente
 ainsi qu'aux actions suivantes:</p>
 
 <ul>
-  <li>se rendre dans la catégorie</li>
-  <li>gérer le éléments (si la catégorie en contient)</li>
-  <li>gérer les sous-catégories</li>
-  <li>gérer les permissions (si la catégorie est privée)</li>
-  <li>supprimer la catégorie (si la catégorie est virtuelle)</li>
+  <li>se rendre dans la catÃ©gorie</li>
+  <li>gÃ©rer le Ã©lÃ©ments (si la catÃ©gorie en contient)</li>
+  <li>gÃ©rer les sous-catÃ©gories</li>
+  <li>gÃ©rer les permissions (si la catÃ©gorie est privÃ©e)</li>
+  <li>supprimer la catÃ©gorie (si la catÃ©gorie est virtuelle)</li>
 </ul>
 
-<h3>Déplacer</h3>
+<h3>DÃ©placer</h3>
 
-<p>Si la catégorie est virtuelle, vous pouvez la déplacer. Déplacer une
-catégorie signifie changer de catégorie parente.</p>
+<p>Si la catÃ©gorie est virtuelle, vous pouvez la dÃ©placer. DÃ©placer une
+catÃ©gorie signifie changer de catÃ©gorie parente.</p>
 
 <h3>Options</h3>
 
 <ul>
 
-  <li><strong>Type d'accès</strong>: gestion des permissions. Si vous rendez
-une catégorie privée, toutes ses catégories filles deviennent privées. Si
-vous rendez une catégorie publique, toutes ses catégories mères deviennent
+  <li><strong>Type d'accÃ¨s</strong>: gestion des permissions. Si vous rendez
+une catÃ©gorie privÃ©e, toutes ses catÃ©gories filles deviennent privÃ©es. Si
+vous rendez une catÃ©gorie publique, toutes ses catÃ©gories mÃ¨res deviennent
 publiques.</li>
 
-  <li><strong>Verrouiller</strong>: la catégorie et toutes ses catégories
+  <li><strong>Verrouiller</strong>: la catÃ©gorie et toutes ses catÃ©gories
 filles deviennent temporairement inaccessibles pour maintenance.</li>
 
-  <li><strong>Commentaires</strong>: autorise les utilisateurs à commenter
-les éléments de cette catégorie.</li>
+  <li><strong>Commentaires</strong>: autorise les utilisateurs Ã  commenter
+les Ã©lÃ©ments de cette catÃ©gorie.</li>
 
   <li><strong>Autoriser l'ajout d'images</strong>: autorise les utilisateurs
-à télécharger des fichiers. Cette option n'est disponible que si la
-catégorie est physique (et non virtuelle).</li>
+Ã  tÃ©lÃ©charger des fichiers. Cette option n'est disponible que si la
+catÃ©gorie est physique (et non virtuelle).</li>
 
 </ul>
 
-<p>Vous pouvez aussi gérer ces options dans la gestion globale des options
-multi-catégories (écrans <span class="pwgScreen">Ajout</span>, <span
+<p>Vous pouvez aussi gÃ©rer ces options dans la gestion globale des options
+multi-catÃ©gories (Ã©crans <span class="pwgScreen">Ajout</span>, <span
 class="pwgScreen">Commentaires</span>, <span
 class="pwgScreen">Verrouiller</span>, <span
-class="pwgScreen">Publique/Privée</span>, <span
-class="pwgScreen">Représentant</span> dans <span
-class="pwgScreen">Administration, Catégories</span>).</p>
+class="pwgScreen">Publique/PrivÃ©e</span>, <span
+class="pwgScreen">ReprÃ©sentant</span> dans <span
+class="pwgScreen">Administration, CatÃ©gories</span>).</p>
 
-<h3>Représentant</h3>
+<h3>ReprÃ©sentant</h3>
 
-<p>Le représentant d'une catégorie est la miniature affichée pour
-représenter la catégorie sur la page principale (<span
-class="pwgScreen">category.php</span>) lorsqu'une catégorie contient
-uniquement des sous-catégories et pas d'éléments directs (comme à la
+<p>Le reprÃ©sentant d'une catÃ©gorie est la miniature affichÃ©e pour
+reprÃ©senter la catÃ©gorie sur la page principale (<span
+class="pwgScreen">category.php</span>) lorsqu'une catÃ©gorie contient
+uniquement des sous-catÃ©gories et pas d'Ã©lÃ©ments directs (comme Ã  la
 racine)</p>
 
-<p>Il existe 4 moyens de choisir le représentant d'une catégorie:</p>
+<p>Il existe 4 moyens de choisir le reprÃ©sentant d'une catÃ©gorie:</p>
 
 <ul>
 
   <li><span class="pwgScreen">picture.php</span>: dans la barre des boutons
-d'action, l'un d'eux permet de choisir l'élément affiché comme représentant
-de la catégorie affichée. Ce bouton d'action n'est disponible que pour les
+d'action, l'un d'eux permet de choisir l'Ã©lÃ©ment affichÃ© comme reprÃ©sentant
+de la catÃ©gorie affichÃ©e. Ce bouton d'action n'est disponible que pour les
 administrateurs.</li>
 
   <li><span class="pwgScreen">Modifier les informations d'une image</span>
-dans l'administration. Cet écran peut être atteint depuis <span
+dans l'administration. Cet Ã©cran peut Ãªtre atteint depuis <span
 class="pwgScreen">picture.php</span> ou <span class="pwgScreen">Gestion par
-lot</span> dans le <em>mode unitaire</em>. Voir l'aide de cet écran pour les
-détails.</li>
+lot</span> dans le <em>mode unitaire</em>. Voir l'aide de cet Ã©cran pour les
+dÃ©tails.</li>
 
-  <li><span class="pwgScreen">Administration, Catégories,
-Représentant</span>. Voir l'aide de cet écran pour les détails.</li>
+  <li><span class="pwgScreen">Administration, CatÃ©gories,
+ReprÃ©sentant</span>. Voir l'aide de cet Ã©cran pour les dÃ©tails.</li>
 
-  <li><span class="pwgScreen">Modifier une catégorie</span> (le présent
-écran).</li>
+  <li><span class="pwgScreen">Modifier une catÃ©gorie</span> (le prÃ©sent
+Ã©cran).</li>
 
 </ul>
 
-<p>La représentation dépend du paramètre de configuration
+<p>La reprÃ©sentation dÃ©pend du paramÃ¨tre de configuration
 <code>allow_random_representative</code> (voir <span
 class="filename">include/config_default.inc.php</span>).</p>
 
-<p>Par défaut (<code>allow_random_representative</code> à false) chaque
-catégorie contenant au moins un élément est représenté par un élément
-fixe. Une fois fixé (à la création de la catégorie), le représentant change
-uniquement lorsque l'administrateur le demande. Si le représentant ne
-convient pas, vous pouvez demander à <strong>Trouver un nouveau représentant
+<p>Par dÃ©faut (<code>allow_random_representative</code> Ã  false) chaque
+catÃ©gorie contenant au moins un Ã©lÃ©ment est reprÃ©sentÃ© par un Ã©lÃ©ment
+fixe. Une fois fixÃ© (Ã  la crÃ©ation de la catÃ©gorie), le reprÃ©sentant change
+uniquement lorsque l'administrateur le demande. Si le reprÃ©sentant ne
+convient pas, vous pouvez demander Ã  <strong>Trouver un nouveau reprÃ©sentant
 au hasard</strong>.</p>
 
-<p>Si le paramètre de configuration <code>allow_random_representative</code>
-est à true, une catégorie contenant des éléments peut ne pas avoir de
-représentant fixe. Utiliser simplement le bouton <strong>Supprimer le
-représentant</strong>.</p>
+<p>Si le paramÃ¨tre de configuration <code>allow_random_representative</code>
+est Ã  true, une catÃ©gorie contenant des Ã©lÃ©ments peut ne pas avoir de
+reprÃ©sentant fixe. Utiliser simplement le bouton <strong>Supprimer le
+reprÃ©sentant</strong>.</p>
 
-<p>Si la catégorie ne contient aucun élément (mais uniquement des 
-sous-catégories) elle peut quand même être représentée par n'importe quel 
-élément grâce à l'écran <span class="pwgScreen">Modifier les informations 
-d'une image</span>. La seule option du présent écran est le bouton
-<strong>Supprimer le représentant</strong>.</p>
+<p>Si la catÃ©gorie ne contient aucun Ã©lÃ©ment (mais uniquement des 
+sous-catÃ©gories) elle peut quand mÃªme Ãªtre reprÃ©sentÃ©e par n'importe quel 
+Ã©lÃ©ment grÃ¢ce Ã  l'Ã©cran <span class="pwgScreen">Modifier les informations 
+d'une image</span>. La seule option du prÃ©sent Ã©cran est le bouton
+<strong>Supprimer le reprÃ©sentant</strong>.</p>
