--- a/language/fr_FR.UTF-8/help/cat_perm.html
+++ b/language/fr_FR.UTF-8/help/cat_perm.html
@@ -1,16 +1,16 @@
-<h2>Gérer les permissions pour une catégorie</h2>
+<h2>GÃ©rer les permissions pour une catÃ©gorie</h2>
 
-<p>Cette écran n'est disponible que pour les catégories privées. Ici vous
-pourrez sélectionner les utilisateurs et les groupes autorisés pour cette
-catégorie.</p>
+<p>Cette Ã©cran n'est disponible que pour les catÃ©gories privÃ©es. Ici vous
+pourrez sÃ©lectionner les utilisateurs et les groupes autorisÃ©s pour cette
+catÃ©gorie.</p>
 
 <h3>Groupes</h3>
 
-<p>Vous pouvez autoriser ou interdire l'accès aux groupes. En modifiant les
+<p>Vous pouvez autoriser ou interdire l'accÃ¨s aux groupes. En modifiant les
 autorisations des groupes, vous modifierez probablement la liste des
-utilisateurs autorisés grâce à l'appartenance aux groupes.</p>
+utilisateurs autorisÃ©s grÃ¢ce Ã  l'appartenance aux groupes.</p>
 
 <h3>Utilisateurs</h3>
 
-<p>Vous pouvez autoriser ou interdire l'accès aux utilisateurs
+<p>Vous pouvez autoriser ou interdire l'accÃ¨s aux utilisateurs
 individuellement.</p>
