--- a/language/fr_FR.UTF-8/help/search.html
+++ b/language/fr_FR.UTF-8/help/search.html
@@ -1,12 +1,12 @@
 <h2>Recherche</h2>
 
-<p>Recherche d'images à travers l'ensemble de la galerie.</p>
+<p>Recherche d'images Ã  travers l'ensemble de la galerie.</p>
 
 <dl>
 
   <dt>Rechercher un mot</dt>
 
-  <dd>Recherche un ou plusieurs mots dans tous les attributs liés aux
+  <dd>Recherche un ou plusieurs mots dans tous les attributs liÃ©s aux
 images. Utiliser * comme joker pour les recherches partielles.</dd>
   
   <dt>Recherche d'un auteur</dt>
@@ -15,13 +15,13 @@ images. Utiliser * comme joker pour les recherches partielles.</dd>
 
   <dt>Recherche par date</dt>
 
-  <dd>Sélectionner une date et/ou une date de fin. Laisser la date vide si
-vous souhaiter faire une recherche "avant". L'année doit être entrée dans le
+  <dd>SÃ©lectionner une date et/ou une date de fin. Laisser la date vide si
+vous souhaiter faire une recherche "avant". L'annÃ©e doit Ãªtre entrÃ©e dans le
 dernier champ sous forme de 4 chiffres (2005 par exemple).</dd>
 
-  <dt>Recherche dans les catégories</dt>
+  <dt>Recherche dans les catÃ©gories</dt>
 
-  <dd>Sélectionner les catégories sur lesquelles restreindre la
+  <dd>SÃ©lectionner les catÃ©gories sur lesquelles restreindre la
 recherche.</dd>
 
 </dl>
