--- a/language/fr_FR.UTF-8/help/synchronize.html
+++ b/language/fr_FR.UTF-8/help/synchronize.html
@@ -3,17 +3,17 @@
 <ul>
 
   <li>Il existe 2 types de synchronisations : structure et
-meta-données. Synchroniser la structure revient à synchroniser votre arbre
-des répertoires et fichiers avec la représentation de la structure dans la
-base de données. Synchroniser les méta-données permet de mettre à jour les
-informations comme le poids du fichier, les dimensions, les données EXIF ou
+meta-donnÃ©es. Synchroniser la structure revient Ã  synchroniser votre arbre
+des rÃ©pertoires et fichiers avec la reprÃ©sentation de la structure dans la
+base de donnÃ©es. Synchroniser les mÃ©ta-donnÃ©es permet de mettre Ã  jour les
+informations comme le poids du fichier, les dimensions, les donnÃ©es EXIF ou
 IPTC.</li>
 
-  <li>La première synchronisation à effectuer doit être celle sur la
+  <li>La premiÃ¨re synchronisation Ã  effectuer doit Ãªtre celle sur la
 structure.</li>
 
   <li>Le processus de synchronisation peut prendre du temps (en fonction de
-la charge du serveur et de la quantité de fichiers à gérer), il est donc
-possible d'avancer pas à pas : catégorie par catégorie.</li>
+la charge du serveur et de la quantitÃ© de fichiers Ã  gÃ©rer), il est donc
+possible d'avancer pas Ã  pas : catÃ©gorie par catÃ©gorie.</li>
 
 </ul>
