--- a/language/fr_FR.UTF-8/help/thumbnail.html
+++ b/language/fr_FR.UTF-8/help/thumbnail.html
@@ -1,36 +1,36 @@
-<h2>Création des miniatures</h2>
+<h2>CrÃ©ation des miniatures</h2>
 
-<p>Création des miniatures manquantes. L'utilisation de cette fonctionnalité
-n'est pas conseillé si votre galerie est hébergée sur un serveur
-mutualisé (resources machine partagées).</p>
+<p>CrÃ©ation des miniatures manquantes. L'utilisation de cette fonctionnalitÃ©
+n'est pas conseillÃ© si votre galerie est hÃ©bergÃ©e sur un serveur
+mutualisÃ© (resources machine partagÃ©es).</p>
 
 <dl>
 
   <dt>Version de GD</dt>
 
   <dd>GD est une librairie graphique de manipulation d'images pour
-PHP. Choisissez la version installée sur votre serveur. Si vous choisissez
-la mauvaise, des messages d'erreurs apparaîtront, revenez sur la page
-précédente et choisissez l'autre version. Si aucune version ne marche, cela
+PHP. Choisissez la version installÃ©e sur votre serveur. Si vous choisissez
+la mauvaise, des messages d'erreurs apparaÃ®tront, revenez sur la page
+prÃ©cÃ©dente et choisissez l'autre version. Si aucune version ne marche, cela
 signifie que GD n'est pas disponible.</dd>
 
   <dt>Largeur et hauteur</dt>
 
   <dd>Dimensions maximum que les miniatures peuvent prendre. Le ratio
-largeur/hauteur original est conservée. Les valeurs par défaut sont
-modifiables grâce aux paramètres de configuration <code>tn_width</code> et
+largeur/hauteur original est conservÃ©e. Les valeurs par dÃ©faut sont
+modifiables grÃ¢ce aux paramÃ¨tres de configuration <code>tn_width</code> et
 <code>tn_height</code> (voir le fichier <span
 class="filename">include/config_default.inc.php</span>).</dd>
   
-  <dt>Nombre de miniatures à créer</dt>
+  <dt>Nombre de miniatures Ã  crÃ©er</dt>
 
-  <dd>N'hésayez pas de miniaturiser un trop grand nombre d'images à la
+  <dd>N'hÃ©sayez pas de miniaturiser un trop grand nombre d'images Ã  la
 fois. En effet, la miniaturisation requiert une relativement grosse
 utilisation processeur.</dd>
 
   <dt>Format de fichier</dt>
 
-  <dd>Les miniatures sont créées au format JPEG. Seuls les formats PNG et
-JPEG peuvent être miniaturisés.</dd>
+  <dd>Les miniatures sont crÃ©Ã©es au format JPEG. Seuls les formats PNG et
+JPEG peuvent Ãªtre miniaturisÃ©s.</dd>
 
 </dl>
