--- a/language/fr_FR.UTF-8/help/user_list.html
+++ b/language/fr_FR.UTF-8/help/user_list.html
@@ -1,7 +1,7 @@
 <h2>Liste des utilisateurs</h2>
 
-<p>Manipulation des propriétés des utilisateurs enregistrés. Seules les
-permissions sont gérées dans un écran différent.</p>
+<p>Manipulation des propriÃ©tÃ©s des utilisateurs enregistrÃ©s. Seules les
+permissions sont gÃ©rÃ©es dans un Ã©cran diffÃ©rent.</p>
 
 <h3>Ajouter un utilisateur</h3>
 
@@ -9,31 +9,31 @@ permissions sont gérées dans un écran différent.</p>
 
 <h3>Liste des utilisateurs</h3>
 
-<p>La liste peut être filtrée avec le nom d'utilisateur (* = joker), avec le
-groupe ou encore le statut. La liste peut être ordonnée selon la date
+<p>La liste peut Ãªtre filtrÃ©e avec le nom d'utilisateur (* = joker), avec le
+groupe ou encore le statut. La liste peut Ãªtre ordonnÃ©e selon la date
 d'enregistrement ou le nom d'utilisateur, par ordre croissant on
-décroissant.</p>
+dÃ©croissant.</p>
 
-<p>Cet écran fonctionne par modification de plusieurs utilisateurs
-simultanément:</p>
+<p>Cet Ã©cran fonctionne par modification de plusieurs utilisateurs
+simultanÃ©ment:</p>
 
 <ul>
-  <li>supprimer des utilisateurs (nécessite une confirmation)</li>
+  <li>supprimer des utilisateurs (nÃ©cessite une confirmation)</li>
   <li>changer le statut</li>
   <li>associer ou dissocier des groupes</li>
-  <li>modifier les propriétés d'affichage</li>
-  <li>modifier les propriétés annexes</li>
+  <li>modifier les propriÃ©tÃ©s d'affichage</li>
+  <li>modifier les propriÃ©tÃ©s annexes</li>
 </ul>
 
-<p>La cible est la liste des utilisateurs sélectionnés (par défaut) ou bien
-tous les utilisateurs de la liste filtrée.</p>
+<p>La cible est la liste des utilisateurs sÃ©lectionnÃ©s (par dÃ©faut) ou bien
+tous les utilisateurs de la liste filtrÃ©e.</p>
 
 <h3>Conseiller</h3>
-<p>Définition d'un utilisateur conseiller:</p>
+<p>DÃ©finition d'un utilisateur conseiller:</p>
 <ul>
-  <li>permet d'accéder à tous les écrans permis par son statut</li>
-  <li>accès uniquement en consultation ou en simulation</li>
+  <li>permet d'accÃ©der Ã  tous les Ã©crans permis par son statut</li>
+  <li>accÃ¨s uniquement en consultation ou en simulation</li>
 </ul>
 
 <p>Il est possible de permettre l'assignation du mode conseiller avec la variable $conf['allow_adviser'].</p>
-<p>Si cette variable est à 'true', il sera possible de définir l'utilisateur comme un conseiller</p>
+<p>Si cette variable est Ã  'true', il sera possible de dÃ©finir l'utilisateur comme un conseiller</p>
