--- a/language/fr_FR.UTF-8/about.html
+++ b/language/fr_FR.UTF-8/about.html
@@ -1,10 +1,10 @@
 <ul>
 
-  <li>PhpWebGallery est une application web permettant de créer facilement
+  <li>PhpWebGallery est une application web permettant de crÃ©er facilement
 une galerie d'images en ligne.</li>
 
-  <li>Techniquement, PhpWebGallery est développée en PHP avec une base de
-données MySQL.</li>
+  <li>Techniquement, PhpWebGallery est dÃ©veloppÃ©e en PHP avec une base de
+donnÃ©es MySQL.</li>
 
   <li>Si vous avez des suggestions ou des commentaires, visitez le <a
   href="http://www.phpwebgallery.net">site officiel</a>.</li>
