--- a/language/fr_FR.UTF-8/help/cat_options.html
+++ b/language/fr_FR.UTF-8/help/cat_options.html
@@ -1,43 +1,43 @@
-<h2>Options des catégories</h2>
+<h2>Options des catÃ©gories</h2>
 
-<p>Gestion des options pour plusieurs catégories à la fois.</p>
+<p>Gestion des options pour plusieurs catÃ©gories Ã  la fois.</p>
 
 <dl>
 
-  <dt>Autorisation à l'ajout</dt>
+  <dt>Autorisation Ã  l'ajout</dt>
 
-  <dd>Rendre les catégories autorisées à l'ajout par les visiteurs. Cette
-option n'est pas disponible pour les catégories virtuelles et
+  <dd>Rendre les catÃ©gories autorisÃ©es Ã  l'ajout par les visiteurs. Cette
+option n'est pas disponible pour les catÃ©gories virtuelles et
 distantes.</dd>
   
   <dt>Commentaires utilisateur</dt>
 
-  <dd>Autoriser les utilisateurs à commenter les images des catégories
-sélectionnées. Par héritage, une image est commentable si elle appartient à
-au moins une catégorie commentable.</dd>
+  <dd>Autoriser les utilisateurs Ã  commenter les images des catÃ©gories
+sÃ©lectionnÃ©es. Par hÃ©ritage, une image est commentable si elle appartient Ã 
+au moins une catÃ©gorie commentable.</dd>
   
   <dt>Verrouiller</dt>
 
-  <dd>Les catégories sélectionnées deviennent temporairement inactives pour
-maintenance. Lorsqu'une catégorie est verrouillée, toutes les catégories
-enfant sont verrouillées. Lorsqu'une catégorie est déverrouillée, toutes les
-catégories parentes sont déverrouillées.</dd>
+  <dd>Les catÃ©gories sÃ©lectionnÃ©es deviennent temporairement inactives pour
+maintenance. Lorsqu'une catÃ©gorie est verrouillÃ©e, toutes les catÃ©gories
+enfant sont verrouillÃ©es. Lorsqu'une catÃ©gorie est dÃ©verrouillÃ©e, toutes les
+catÃ©gories parentes sont dÃ©verrouillÃ©es.</dd>
 
-  <dt>Publique / Privée</dt>
+  <dt>Publique / PrivÃ©e</dt>
 
-  <dd>Gestion du statut des catégories. Les permissions ne sont possibles
-que pour les catégories privées. Une fois qu'une catégorie est privée, vous
-devez explicitement autoriser les utilisateurs ou les groupes à y
-accéder. Lorsqu'une catégorie devient privée, toutes les catégories enfant
-deviennent privées. Lorsqu'une catégorie devient publique, toutes les
-catégories parentes deviennent publiques.</dd>
+  <dd>Gestion du statut des catÃ©gories. Les permissions ne sont possibles
+que pour les catÃ©gories privÃ©es. Une fois qu'une catÃ©gorie est privÃ©e, vous
+devez explicitement autoriser les utilisateurs ou les groupes Ã  y
+accÃ©der. Lorsqu'une catÃ©gorie devient privÃ©e, toutes les catÃ©gories enfant
+deviennent privÃ©es. Lorsqu'une catÃ©gorie devient publique, toutes les
+catÃ©gories parentes deviennent publiques.</dd>
 
-  <dt>Représentant</dt>
+  <dt>ReprÃ©sentant</dt>
 
-  <dd>Cette option est disponible uniquement si le paramètre de
+  <dd>Cette option est disponible uniquement si le paramÃ¨tre de
 configuration <code>allow_random_representative</code> (voir <span
 class="filename">include/config_default.inc.php</span>) est
-<em>true</em>. Chaque catégorie peut-être représentée au hasard ou par une
+<em>true</em>. Chaque catÃ©gorie peut-Ãªtre reprÃ©sentÃ©e au hasard ou par une
 miniature fixe unique.</dd>
 
 </dl>
