--- a/language/fr_FR.UTF-8/help/maintenance.html
+++ b/language/fr_FR.UTF-8/help/maintenance.html
@@ -1,46 +1,46 @@
 <h2>Maintenance</h2>
 
-<p>Pour optimiser le temps de génération des pages, PhpWebGallery utilise
+<p>Pour optimiser le temps de gÃ©nÃ©ration des pages, PhpWebGallery utilise
 des informations en cache. Par exemple, au lieu de compter le nombre
-d'éléments contenus dans chaque catégorie à chaque rechargement de page,
-cette information est stockée dans la base de données. En théorie, cette
-information doit toujours être correcte, mais parfois une erreur peut
+d'Ã©lÃ©ments contenus dans chaque catÃ©gorie Ã  chaque rechargement de page,
+cette information est stockÃ©e dans la base de donnÃ©es. En thÃ©orie, cette
+information doit toujours Ãªtre correcte, mais parfois une erreur peut
 survenir et l'information en cache devient fausse.</p>
 
 <p>Des informations deviennent inutiles avec le temps. Les supprimer de la
-base de données libère de l'espace disque.</p>
+base de donnÃ©es libÃ¨re de l'espace disque.</p>
 
 <ul>
 
-  <li><strong>Mettre à jour les informations des catégories</strong>. Pour
-chaque catégorie, les informations à controller et/ou mettre à jour sont les
-suivantes: liste des catégories mères, nombre d'éléments, date du dernier
-élément, position parmi les catégories soeur, position dans l'arbre complet
-des catégories. Cette action vérifie également la cohérence des
-représentants.</li>
+  <li><strong>Mettre Ã  jour les informations des catÃ©gories</strong>. Pour
+chaque catÃ©gorie, les informations Ã  controller et/ou mettre Ã  jour sont les
+suivantes: liste des catÃ©gories mÃ¨res, nombre d'Ã©lÃ©ments, date du dernier
+Ã©lÃ©ment, position parmi les catÃ©gories soeur, position dans l'arbre complet
+des catÃ©gories. Cette action vÃ©rifie Ã©galement la cohÃ©rence des
+reprÃ©sentants.</li>
 
-  <li><strong>Mettre à jour les informations des images</strong>. Pour
-chaque image, les informations à mettre à jour sont: chemin complet vers le
+  <li><strong>Mettre Ã  jour les informations des images</strong>. Pour
+chaque image, les informations Ã  mettre Ã  jour sont: chemin complet vers le
 fichier, note moyenne. <em>Attention</em>: ne pas confondre avec les
-méta-données qui sont synchronisées sur l'écran <span
-class="pwgScreen">Administration, Général, Synchroniser</span> ou sur
-l'écran <span class="pwgScreen">Modifier les informations d'une image</span>
+mÃ©ta-donnÃ©es qui sont synchronisÃ©es sur l'Ã©cran <span
+class="pwgScreen">Administration, GÃ©nÃ©ral, Synchroniser</span> ou sur
+l'Ã©cran <span class="pwgScreen">Modifier les informations d'une image</span>
 (accessible depuis la page de visualisation d'une image <span
 class="pwgScreen">picture.php</span>).</li>
 
   <li><strong>Purger l'historique</strong>. Supprime toutes les lignes de
-la table <code>history</code>. L'écran <span
-class="pwgScreen">Administration, Général, Historique</span> ne montre alors
-plus aucune information sur le passé. <em>Attention</em>: toutes les données
-seront perdues et il n'existe aucun moyen de les récupérer.</li>
+la table <code>history</code>. L'Ã©cran <span
+class="pwgScreen">Administration, GÃ©nÃ©ral, Historique</span> ne montre alors
+plus aucune information sur le passÃ©. <em>Attention</em>: toutes les donnÃ©es
+seront perdues et il n'existe aucun moyen de les rÃ©cupÃ©rer.</li>
 
   <li><strong>Purger les sessions</strong>. Supprimer les sessions
-expirées..</li>
+expirÃ©es..</li>
 
-  <li><strong>Purger les flux de notification jamais utilisés</strong></li>
+  <li><strong>Purger les flux de notification jamais utilisÃ©s</strong></li>
 
-  <li><strong>Réparer et optimiser la base de données</strong>
-Pour chaque tables de la base de données PhpWegGallery, les opérations de ré-ordonnancement, de réparation et d'optimisation sont effectuées.
+  <li><strong>RÃ©parer et optimiser la base de donnÃ©es</strong>
+Pour chaque tables de la base de donnÃ©es PhpWegGallery, les opÃ©rations de rÃ©-ordonnancement, de rÃ©paration et d'optimisation sont effectuÃ©es.
   </li>
 
 </ul>
